# SideCar

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cache.json  Cargo.toml  Download.cache  Download.sh  README.md  build.rs
.cargo/: config.toml
.github/: FUNDING.yml  Update.md  dependabot.yml
.github/workflows/: Auto.yml  Rust.yml
Documentation/GitHub/: Architecture.md  DeepDive.md
Documentation/Rust/doc/: crates.js  help.html  index.html  settings.html  src-files.js
Resource/: dns-override.js
Source/: Download.rs  Library.rs  Spawn.rs  main.rs
Source/Source/SideCar/: Spawn.rs
aarch64-apple-darwin/NODE/16/: CHANGELOG.md  README.md
aarch64-apple-darwin/NODE/17/: CHANGELOG.md  README.md
aarch64-apple-darwin/NODE/18/: CHANGELOG.md  README.md
aarch64-apple-darwin/NODE/19/: CHANGELOG.md  README.md
aarch64-apple-darwin/NODE/20/: CHANGELOG.md  README.md
aarch64-apple-darwin/NODE/21/: CHANGELOG.md  README.md
aarch64-apple-darwin/NODE/22/: CHANGELOG.md  README.md
aarch64-apple-darwin/NODE/23/: CHANGELOG.md  README.md
aarch64-apple-darwin/NODE/24/: CHANGELOG.md  README.md
aarch64-unknown-linux-gnu/NODE/16/: CHANGELOG.md  README.md
aarch64-unknown-linux-gnu/NODE/17/: CHANGELOG.md  README.md
aarch64-unknown-linux-gnu/NODE/18/: CHANGELOG.md  README.md
aarch64-unknown-linux-gnu/NODE/19/: CHANGELOG.md  README.md
aarch64-unknown-linux-gnu/NODE/20/: CHANGELOG.md  README.md
aarch64-unknown-linux-gnu/NODE/21/: CHANGELOG.md  README.md
aarch64-unknown-linux-gnu/NODE/22/: CHANGELOG.md  README.md
aarch64-unknown-linux-gnu/NODE/23/: CHANGELOG.md  README.md
aarch64-unknown-linux-gnu/NODE/24/: CHANGELOG.md  README.md
x86_64-apple-darwin/NODE/16/: CHANGELOG.md  README.md
x86_64-apple-darwin/NODE/17/: CHANGELOG.md  README.md
x86_64-apple-darwin/NODE/18/: CHANGELOG.md  README.md
x86_64-apple-darwin/NODE/19/: CHANGELOG.md  README.md
x86_64-apple-darwin/NODE/20/: README.md  (+1 more)
(+137 files in other folders)
