[package]
name = "SideCar"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
